feat(songs): add songs controller